--- a/.env.docker
+++ b/.env.docker
@@ -43,13 +43,19 @@ SCHEMA_REGISTRY_URL=http://schema-registry:8081
 NPM_BIN_PATH=/usr/bin/npm
 
 # ============================================
-# Kafka Topic Configuration (Optional)
+# Kafka Topic Configuration
 # ============================================
-# Number of partitions per topic (default: 1)
+# Number of partitions per topic
+# Keep at 1 for now, increase for high-volume tables if needed
 KAFKA_TOPIC_PARTITIONS=1
 
-# Replication factor (default: 1)
-KAFKA_TOPIC_REPLICATION_FACTOR=1
+# Replication factor (must be <= number of brokers)
+# With 3 brokers, RF=3 ensures data survives broker failures
+KAFKA_TOPIC_REPLICATION_FACTOR=3
+
+# Minimum in-sync replicas for writes to succeed
+# With RF=3, MIN_ISR=2 allows 1 broker to fail without blocking writes
+KAFKA_TOPIC_MIN_ISR=2
 
 # Retention time in milliseconds (default: 604800000 = 7 days)
 KAFKA_TOPIC_RETENTION_MS=604800000
@@ -57,13 +63,32 @@ KAFKA_TOPIC_RETENTION_MS=604800000
 # Retention size in bytes per partition (default: -1 = unlimited)
 KAFKA_TOPIC_RETENTION_BYTES=-1
 
-# Cleanup policy (default: delete)
+# Cleanup policy (delete or compact)
 KAFKA_TOPIC_CLEANUP_POLICY=delete
 
-# Compression type (default: snappy)
+# Compression type (snappy recommended for CDC)
 KAFKA_TOPIC_COMPRESSION_TYPE=snappy
 
-# Minimum in-sync replicas (default: 1)
-KAFKA_TOPIC_MIN_ISR=1
+# ============================================
+# Kafka Connect Configuration
+# ============================================
+# JVM Heap size for Kafka Connect
+# Recommended: 2GB for 1-3 connectors, 4GB for 4-10, 6-8GB for 10-20
+KAFKA_CONNECT_HEAP_OPTS=-Xms4G -Xmx4G
+
+# ============================================
+# Sink Connector Error Handling (Dead Letter Queue)
+# ============================================
+# Error tolerance: "none" = fail on error, "all" = continue and send to DLQ
+SINK_ERRORS_TOLERANCE=all
+
+# Enable Dead Letter Queue for failed records
+SINK_DLQ_ENABLED=true
+
+# DLQ topic replication factor (should match KAFKA_TOPIC_REPLICATION_FACTOR)
+SINK_DLQ_REPLICATION_FACTOR=3
+
+# Include error context headers in DLQ messages (helps debugging)
+SINK_DLQ_CONTEXT_HEADERS=true
 
 CLUSTER_ID=MkU3OEVBNTcwNTJENDM2Qk
