--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,10 @@ requires-python = ">=3.13"
 dependencies = [
     "avro==1.12.0",
     "celery>=5.5.3",
-    "confluent-kafka>=2.12.1",
+    "confluent-kafka[avro,schema-registry]>=2.12.1",
+    "httpx>=0.28.0",
+    "authlib>=1.3.0",
+    "cachetools>=5.0.0",
     "cookiecutter>=2.6.0",
     "django==5.2.7",
     "django-browser-reload>=1.21.0",
