updated kakfa-internal workers.

--- a/.env.docker
+++ b/.env.docker
@@ -33,7 +33,7 @@ CELERY_RESULT_BACKEND=redis://redis:6379/0
 # ============================================
 # Kafka Configuration (Docker Kafka)
 # ============================================
-KAFKA_BOOTSTRAP_SERVERS=kafka:29092
+KAFKA_BOOTSTRAP_SERVERS=kafka-1:29092,kafka-2:29092,kafka-3:29092
 KAFKA_CONNECT_URL=http://kafka-connect:8083
 JOLOKIA_URL=http://kafka-connect:8778/jolokia
 SCHEMA_REGISTRY_URL=http://schema-registry:8081
