--- a/theme/static_src/package.json
+++ b/theme/static_src/package.json
@@ -14,12 +14,13 @@
   "license": "MIT",
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.11",
+    "daisyui": "^5.0.43",
     "cross-env": "^7.0.3",
     "postcss": "^8.5.6",
     "postcss-cli": "^11.0.1",
     "postcss-nested": "^7.0.2",
     "postcss-simple-vars": "^7.0.1",
     "rimraf": "^6.0.1",
-    "tailwindcss": "^4.1.18"
+    "tailwindcss": "^4.1.11"
   }
 }
