--- a/.gitignore
+++ b/.gitignore
@@ -26,7 +26,7 @@ ENV/
 db.sqlite3
 media/
 staticfiles/
-static/
+/static/
 
 # VS Code / PyCharm / IDEs
 .vscode/
@@ -56,7 +56,7 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 .next/
-dist/
+/dist/
 build/
 
 # Ignore Claude config folder
