--- a/.env.docker
+++ b/.env.docker
@@ -7,7 +7,7 @@
 # ============================================
 # Django Configuration
 # ============================================
-DEBUG=True
+DEBUG=False
 SECRET_KEY=your-secret-key-change-in-production
 ALLOWED_HOSTS=localhost,127.0.0.1,django
 
