updated server .env.docker

--- a/.env.docker
+++ b/.env.docker
@@ -1,7 +1,6 @@
 # ============================================
 # Docker Environment Configuration
 # ============================================
-# Copy this file to .env.docker.local and customize for your environment
 # This file is used by docker-compose.yaml
 
 # ============================================
@@ -9,7 +8,7 @@
 # ============================================
 DEBUG=False
 SECRET_KEY=your-secret-key-change-in-production
-ALLOWED_HOSTS=localhost,127.0.0.1,django
+ALLOWED_HOSTS=localhost,127.0.0.1,django,192.168.0.50
 
 # ============================================
 # Database Configuration (Docker MySQL)
@@ -17,18 +16,18 @@ ALLOWED_HOSTS=localhost,127.0.0.1,django
 DB_ENGINE=django.db.backends.mysql
 DB_NAME=client
 DB_USER=root
-DB_PASSWORD=root
-DB_HOST=mysql
+DB_PASSWORD=jovo_db@2024
+DB_HOST=192.168.0.50
 DB_PORT=3306
 
 # ============================================
 # Redis Configuration (Docker Redis)
 # ============================================
-REDIS_HOST=redis
+REDIS_HOST=jovo-redis
 REDIS_PORT=6379
 REDIS_DB=0
-CELERY_BROKER_URL=redis://redis:6379/0
-CELERY_RESULT_BACKEND=redis://redis:6379/0
+CELERY_BROKER_URL=redis://jovo-redis:6379/0
+CELERY_RESULT_BACKEND=redis://jovo-redis:6379/1
 
 # ============================================
 # Kafka Configuration (Docker Kafka)
