--- a/.env.docker
+++ b/.env.docker
@@ -26,8 +26,8 @@ DB_PORT=3306
 REDIS_HOST=jovo-redis
 REDIS_PORT=6379
 REDIS_DB=0
-CELERY_BROKER_URL=redis://jovo-redis:6379/0
-CELERY_RESULT_BACKEND=redis://jovo-redis:6379/1
+CELERY_BROKER_URL=redis://redis:6379/0
+CELERY_RESULT_BACKEND=redis://redis:6379/1
 
 # ============================================
 # Kafka Configuration (Docker Kafka)
